revert: remove all overflow and zoom fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -190,22 +190,8 @@ button {
 }
 
 
-@media (max-width: 968px) {
-  .admin-main, .dashboard-main {
-    grid-column: 1 / -1 !important;
-    width: 100% !important;
-    max-width: 100vw !important;
-    box-sizing: border-box !important;
-  }
-}
 
 
 
-/* Prevent iOS zoom on input focus - correct fix */
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  select, textarea, input[type="text"], input[type="email"],
-  input[type="password"], input[type="number"], input[type="tel"],
-  input[type="url"], input[type="search"] {
-    font-size: 16px;
-  }
-}
+
+
